--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,2 @@
-[package]
-name = "hello"
-version = "0.1.0"
-edition = "2018"
-
-[dependencies]
-tokio = "0.2"
-lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime" }
-lambda_runtime = "0.2.1"
-rusoto_core = "0.45.0"
-rusoto_dynamodb = "0.45.0"
-serde = "1.0.84"
-serde_derive = "1.0.84"
-serde_json = "1.0.34"
-serde_dynamodb = "0.6.0"
+[workspace]
+members = ["handlers/put_handler", "handlers/get_handler"]
